HIVE-28655: Implement HMS Related Drop Stats Changes (Part2) COL_STATS_ACCURATE related changes (#6198)
Co-authored-by: zdeng <dengzh@apache.org>